--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "backend/index.js",
-  "scripts": {
-    "dev": "nodemon backend/index.js",
-    "start":"node backend/index.js",
-    "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend"
-  },
+"scripts": {
+  "dev": "nodemon backend/index.js"
+},
   "keywords": [],
   "author": "",
   "type": "module",
