--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-MONGO_URI = mongodb+srv://harshitarera:lWm2RU4T3jQd0hiP@cluster0.7iljum3.mongodb.net/auth_db?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://harshitarera:lWm2RU4T3jQd0hiP@cluster0.7iljum3.mongodb.net/auth_db?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
-JWT_SECRET = mysecretkey
-NODE_ENV = development
-MAILTRAP_TOKEN = a6fef351691791d9333051aa2d3a66b4
-MAILTRAP_ENDPOINT = https://send.api.mailtrap.io/
-CLIENT_URL = http://localhost:5173
+JWT_SECRET=mysecretkey
+NODE_ENV=development
+MAILTRAP_TOKEN=a6fef351691791d9333051aa2d3a66b4
+MAILTRAP_ENDPOINT=https://send.api.mailtrap.io/
+CLIENT_URL=http://localhost:5173
