--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ dist
 dist-ssr
 *.local
 
+
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -23,4 +25,10 @@ dist-ssr
 *.sln
 *.sw?
 
-node_modules
+
+.env
+
+
+
+
+
