--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "backend/index.js",
-"scripts": {
-  "dev": "nodemon backend/index.js"
-},
+  "scripts": {
+    "start": "node backend/index.js",
+    "dev:backend": "nodemon backend/index.js",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "build": "npm install && cd frontend && npm install && npm run build"
+  },
   "keywords": [],
   "author": "",
   "type": "module",
